--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,7 @@ project(TensordboardLogger
 # Switch ${TENSOR_LOG_DIR} to ${PROJECT_SOURCE_DIR} ??
 
 # Define proto directory and proto files.
-set(PROTOBUF_DIRECTORY ${TENSOR_LOG_DIR}/proto)
+set(PROTOBUF_DIRECTORY ${PROJECT_SOURCE_DIR}/proto)
 file(GLOB PROTOBUF_DEFINITION_FILES ${PROTOBUF_DIRECTORY}/*.proto)
 
 # Run protoc
@@ -20,12 +20,12 @@ file(GLOB PROTOBUF_GEN_HEADERS ${PROTOBUF_DIRECTORY}/*.h)
 file(GLOB PROTOBUF_GEN_SRC ${PROTOBUF_DIRECTORY}/*.cc)
 
 # Move files
-execute_process(COMMAND mv ${PROTOBUF_GEN_HEADERS} ${TENSOR_LOG_DIR}/include)
-execute_process(COMMAND mv ${PROTOBUF_GEN_SRC} ${TENSOR_LOG_DIR}/src)
+execute_process(COMMAND mv ${PROTOBUF_GEN_HEADERS} ${PROJECT_SOURCE_DIR}/include)
+execute_process(COMMAND mv ${PROTOBUF_GEN_SRC} ${PROJECT_SOURCE_DIR}/src)
 
 # Define library 
-file(GLOB HEADER_LIST ${TENSOR_LOG_DIR}/include/*.h)
-file(GLOB SRC_LIST ${TENSOR_LOG_DIR}/src/*.cc)
+file(GLOB HEADER_LIST ${PROJECT_SOURCE_DIR}/include/*.h)
+file(GLOB SRC_LIST ${PROJECT_SOURCE_DIR}/src/*.cc)
 
 add_library(tensorboard_logger
     ${HEADER_LIST}
@@ -35,7 +35,7 @@ find_library(protobuf REQUIRED)
 
 target_include_directories(tensorboard_logger
     PUBLIC 
-    ${TENSOR_LOG_DIR}/include
+    ${PROJECT_SOURCE_DIR}/include
     ${PROTOBUF_include})
 
 target_link_libraries(tensorboard_logger 
@@ -45,3 +45,12 @@ target_link_libraries(tensorboard_logger
 # All users of this library will need at least C++11
 #target_compile_features(tensorboard_logger PUBLIC cxx_std_11)
 #target_compile_features(tensorboard_logger PRIVATE -Wall)
+
+# Define Test Library
+add_executable(tensorboard_logger_tests
+    ${HEADER_LIST}
+    tests/test_tensorboard_logger.cc)
+
+target_link_libraries(tensorboard_logger_tests 
+    PRIVATE
+    tensorboard_logger)
